samples/_failures_safe/1761459961_f3a740_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_865787e0.c: In function ‘main’:
./samples/SAFE/__tmp_865787e0.c:144:42: error: ‘struct compression_result’ has no member named ‘comp’
  144 |             double ratio = (double)result.comp
      |                                          ^
./samples/SAFE/__tmp_865787e0.c:144:13: error: expected ‘,’ or ‘;’ at end of input
  144 |             double ratio = (double)result.comp
      |             ^~~~~~
./samples/SAFE/__tmp_865787e0.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_865787e0.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_865787e0.c:144:13: error: expected declaration or statement at end of input
